# QViewer

./: .gitmodules
app/: CMakeLists.txt  build.gradle
app/common/: CMakeLists.txt  Engine.h  GLContext.h  GestureManager.h  Renderer.h  SensorManager.h
app/common/src/: Engine.cpp  GLContext.cpp  GestureManager.cpp  SensorManager.cpp
app/src/androidTest/java/com/qualcomm/qviewer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/Shaders/: shader.fs  shader.vs
app/src/main/cpp/: CMakeLists.txt  CubeRenderer.cpp  CubeRenderer.h  main.cpp
app/src/main/java/com/qualcomm/qviewer/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/qualcomm/qviewer/: ExampleUnitTest.java
app/util/: AssetHelper.h  CMakeLists.txt  FrameListener.h  LogUtil.h  ModelDrawable.h  OpenGLCommon.h  OpenGLShaderProgram.h  util.h
app/util/src/: AssetHelper.cpp  OpenGLCommon.cpp  OpenGLShaderProgram.cpp
gradle/wrapper/: gradle-wrapper.properties
